backend/tests/golden/queries/positive/10_comma_join_implicit/query.sdbl
ВЫБРАТЬ
    К.Наименование,
    Д.Дата
ИЗ
    Справочник.Контрагенты КАК К, Документ.АвансовыйОтчет КАК Д
ГДЕ
    К.Ссылка = Д.Контрагент
