backend/tests/golden/queries/negative/01_simple_select/query.sdbl
ВЫБРАТЬ
    Ссылка,
    Наименование
ИЗ
    Справочник.Контрагенты
ГДЕ
    Ссылка = &Контрагент
